testsuite/tests/indexed-types/should_fail/T16110_Fail3.stderr

T16110_Fail3.hs:11:3: error:
    • Illegal argument ‘Int’ in:
        ‘type T a Int = Int’
        The arguments to ‘T’ must all be distinct type variables
    • In the default type instance declaration for ‘T’
      In the class declaration for ‘C’
